# game-instant-maching

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  docker-compose.yml
agents/designer/: AGENT.md  start.sh
agents/product-planning/: AGENT.md  start.sh
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_add_missing_indexes.py  b2c3d4e5f6a7_add_ip_hash_to_recruitments.py  c3d4e5f6a7b8_add_ready_to_close.py  d4e5f6a7b8c9_add_play_style_and_microphone.py  e5f6a7b8c9d0_add_games_table.py  eeb1ca6bfe11_initial_schema.py  f6a7b8c9d0e1_add_user_suspension_and_report_status.py
apps/api/app/: config.py  dependencies.py  main.py  rate_limit.py  websocket.py
apps/api/app/models/: __init__.py  base.py  block.py  feedback.py  game.py  message.py  recruitment.py  report.py  room.py  user.py
apps/api/app/routers/: admin.py  auth.py  blocks.py  games.py  recruitments.py  reports.py  rooms.py  ws.py
apps/api/app/schemas/: admin.py  auth.py  block.py  game.py  recruitment.py  report.py  room.py
apps/api/app/services/: chat_cleanup.py  matching.py  moderation.py  turnstile.py
apps/api/app/utils/: ng_words.py  validators.py
apps/api/tests/: conftest.py  test_auth.py  test_blocks_and_health.py  test_fixes.py  test_recruitments.py  test_rooms.py  test_turnstile.py  test_websocket.py
apps/web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  (+1 more)
docs/: adr-001-tech-stack.md  competitive-analysis.md  fix-instructions.md  improvement-instructions.md  matching-algorithm.md
(+19 files in other folders)
